--- a/black-dashboard-react-master/package.json
+++ b/black-dashboard-react-master/package.json
@@ -6,9 +6,13 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "6.4.0",
     "axios": "^1.6.8",
+    "body-parser": "^1.20.2",
     "bootstrap": "4.6.2",
     "chart.js": "3.9.1",
     "classnames": "2.3.2",
+    "cookie-parser": "^1.4.6",
+    "express": "^4.19.2",
+    "http": "^0.0.1-security",
     "http-proxy-middleware": "^3.0.0",
     "perfect-scrollbar": "1.5.5",
     "prop-types": "15.8.1",
@@ -19,7 +23,9 @@
     "react-router-dom": "6.11.1",
     "react-scripts": "5.0.1",
     "sass": "1.62.1",
-    "sweetalert2": "^11.11.0"
+    "socket.io": "^4.7.5",
+    "sweetalert2": "^11.11.0",
+    "ws": "^8.17.1"
   },
   "scripts": {
     "start": "react-scripts start",
