--- a/comu/build.gradle
+++ b/comu/build.gradle
@@ -1,3 +1,4 @@
+
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.2.4'
@@ -29,6 +30,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
 
+	// QueryDSL(springboot 3.0 이상)
+	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
+	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 	implementation 'javax.xml.bind:jaxb-api:2.3.1'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
@@ -42,6 +49,16 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 
 }
+
+// QeuryDSL
+def querydslSrcDir = 'src/main/generated'
+clean {
+	delete file(querydslSrcDir)
+}
+tasks.withType(JavaCompile) {
+	options.generatedSourceOutputDirectory = file(querydslSrcDir)
+}
+
 
 tasks.named('test') {
 	useJUnitPlatform()
